--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ a {
   height: 12px;
   margin-right: 10px;
 }
+
 .auth-link {
   color: var(--primary-color-text);
   font-weight: 500;
@@ -101,6 +102,7 @@ a {
 .auth-link:focus {
   color: var(--accent-color);
 }
+
 .header-page .auth-nav {
   display: flex;
   margin-left: auto;
@@ -311,6 +313,8 @@ a {
   padding: 6px 22px;
   color: var(--bgd-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn-nav,
@@ -367,6 +371,23 @@ a {
 }
 span.studio,
 .adress-text {
+  color: var(--bgd-color);
+}
+.footer-social {
+  display: inline-block;
+  width: 206px;
+  outline: 1px solid white;
+}
+.footer-item {
+  display: flex;
+}
+.footer-title {
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
   color: var(--bgd-color);
 }
 .adress {
