add section client

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --setion-bgd-team: #f5f4fa;
   --color-border: #eeeeee;
   --color-line-header: #ececec;
+  --color-border-client: #AFB1B8;
 }
 
 /* Body */
@@ -18,6 +19,7 @@
   padding-right: 15px;
   margin: 0 auto;
 }
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -36,15 +38,18 @@ body {
 a {
   text-decoration: none;
 }
+
 .list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
+
 .header-all {
   display: flex;
   align-items: baseline;
 }
+
 .nav-all {
   display: flex;
   align-items: center;
@@ -60,9 +65,11 @@ a {
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
+
 .logo span {
   color: var(--logo-color-span);
 }
+
 .header-link {
   display: block;
   padding-top: 32px;
@@ -74,20 +81,25 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
 }
+
 .header-nav .header-link.current {
   color: var(--accent-color);
 }
+
 .header-nav {
   display: flex;
   margin-left: 93px;
 }
-.header-nav .lex + .lex {
+
+.header-nav .lex+.lex {
   margin-left: 50px;
 }
+
 .icon-nav {
   width: 16px;
   height: 12px;
@@ -98,20 +110,27 @@ a {
   color: var(--primary-color-text);
   font-weight: 500;
 }
+
 .auth-link:hover,
 .auth-link:focus {
   color: var(--accent-color);
+}
+
+.auth-link:hover svg,
+.auth-link:focus svg {
+  fill: var(--accent-color);
 }
 
 .header-page .auth-nav {
   display: flex;
   margin-left: auto;
 }
+
 .line {
   border-bottom: 1px solid var(--color-line-header);
 }
 
-.auth-nav .head + .head {
+.auth-nav .head+.head {
   margin-left: 50px;
 }
 
@@ -125,10 +144,8 @@ a {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
     url(../images/decoration/bgd-hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -149,6 +166,7 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
 .hero-btn {
   border-radius: 4px;
   padding: 10px 32px;
@@ -173,13 +191,16 @@ a {
   height: 1px;
   margin: -1px;
 }
+
 .detail-section {
   display: flex;
   justify-content: space-between;
 }
+
 .detail-items {
   width: 270px;
 }
+
 .icon-box {
   width: 270px;
   height: 120px;
@@ -187,12 +208,13 @@ a {
   margin-bottom: 30px;
   background-color: var(--setion-bgd-team);
 }
+
 .icon-detail {
   width: 70px;
   height: 70px;
 }
 
-.detail-items + .detail-items {
+.detail-items+.detail-items {
   margin-left: 30px;
 }
 
@@ -203,6 +225,7 @@ a {
   font-weight: 700;
   font-size: 14px;
 }
+
 .detail-text {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -215,6 +238,7 @@ a {
   padding-top: 0;
   padding-bottom: 94px;
 }
+
 .work-title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -223,9 +247,11 @@ a {
   font-size: 36px;
   text-align: center;
 }
+
 .work-items {
   justify-content: space-between;
 }
+
 .work-img {
   display: block;
   max-width: 100%;
@@ -245,9 +271,11 @@ a {
   font-size: 36px;
   text-align: center;
 }
+
 .team-list {
   justify-content: space-between;
 }
+
 .team-item {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -268,6 +296,7 @@ a {
   font-size: 16px;
   line-height: 1.19;
 }
+
 .team-text {
   margin-top: 0px;
   margin-bottom: 16px;
@@ -276,20 +305,55 @@ a {
   font-size: 16px;
   line-height: 1.19;
 }
-/* .social-box {
-} */
+
+/* Section client */
+.client-list {
+  display: flex;
+}
+
+.client-items+.client-items {
+  margin-left: 30px;
+}
+
+.client-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--color-border-client);
+  border-radius: 4px;
+}
+
+.client-icon {
+  fill: var(--color-border-client)
+}
+
+.client-link:hover,
+.client-link:focus {
+  border-color: var(--accent-color);
+}
+
+.client-link:hover .client-icon,
+.client-link:focus .client-icon {
+  fill: var(--accent-color);
+}
+
+/* social-box  */
+
 .social {
   display: flex;
   justify-content: space-between;
   width: 206px;
   margin: 0px 32px 30px 32px;
-  outline: 1px solid greenyellow;
   padding: 12px;
 }
+
 .icon-social {
   width: 20px;
   height: 20px;
 }
+
 /* portfolio */
 .btn-nav {
   border-radius: 4px;
@@ -304,7 +368,8 @@ a {
   line-height: 1.6;
   letter-spacing: 0.03em;
 }
-.btn-m + .btn-m {
+
+.btn-m+.btn-m {
   margin-left: 8px;
 }
 
@@ -317,6 +382,11 @@ a {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-items:hover,
+.portfolio-items:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .btn-nav,
 .hero-btn {
   cursor: pointer;
@@ -326,6 +396,7 @@ a {
   display: block;
   margin-bottom: 0px;
 }
+
 .portfolio-title {
   margin-top: 0px;
   margin-bottom: 4px;
@@ -335,6 +406,7 @@ a {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .portfolio-text {
   margin-top: 0;
   margin-bottom: 0;
@@ -342,45 +414,75 @@ a {
   font-size: 16px;
   line-height: 1.9;
 }
+
 .frame {
   border: 1px solid var(--color-border);
   border-top: transparent;
   padding: 20px 24px;
 }
+
 .portfolio-list-btn {
   justify-content: center;
 }
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   row-gap: 30px;
   column-gap: 30px;
 }
+
 .portfolio-nav {
   margin-bottom: 50px;
 }
+
 /* Footer */
 .footer {
   background-color: var(--bgd-color-footer);
   padding-bottom: 60px;
   padding-top: 60px;
 }
+
 .footer-logo {
   display: inline-block;
   margin-bottom: 20px;
 }
+
 span.studio,
 .adress-text {
   color: var(--bgd-color);
 }
+
+.footer-adress {
+  display: flex;
+}
+
+/* Footer-social */
+
 .footer-social {
-  display: inline-block;
   width: 206px;
   outline: 1px solid white;
 }
-.footer-item {
+
+.social-list {
   display: flex;
+  margin-top: 20px;
 }
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.social-item+.social-item {
+  margin-left: 10px;
+}
+
 .footer-title {
   margin: 0;
   margin-bottom: 20px;
@@ -390,25 +492,31 @@ span.studio,
   text-transform: uppercase;
   color: var(--bgd-color);
 }
+
 .adress {
   font-style: normal;
 }
+
 .adress-text {
   margin-bottom: 9px;
   margin-top: 0;
 }
+
 .footter-auth-link,
 .footer {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
 }
+
 .footter-auth-link:hover,
 .footter-auth-link:focus {
   color: var(--accent-color);
 }
+
 .auth-nav {
   display: inline-block;
 }
+
 .nav-item {
   margin-bottom: 9px;
 }
