--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ a {
   align-items: center;
   width: 270px;
   height: 120px;
-  padding: 25px 100px;
+  margin-bottom: 30px;
   background-color: var(--setion-bgd-team);
 }
 
